// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`charge() action creator should create the correct actions for when the charge procedure is successful even if location header is missing: charge success payload 1`] = `
Object {
  "meta": Object {
    "chargeId": "",
  },
  "payload": Object {
    "cancelUrl": "string",
    "returnUrl": "string",
    "status": "Processing",
  },
  "type": "@farfetch/blackout-redux/CHARGE_SUCCESS",
}
`;

exports[`charge() action creator should create the correct actions for when the charge procedure is successful: charge success payload 1`] = `
Object {
  "meta": Object {
    "chargeId": "43b059df-898e-4407-8347-b075b645bf6c",
  },
  "payload": Object {
    "cancelUrl": "string",
    "returnUrl": "string",
    "status": "Processing",
  },
  "type": "@farfetch/blackout-redux/CHARGE_SUCCESS",
}
`;
